--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,25 @@
-<style>
+
     body {
       display: flex;
       min-height: 100vh;
       flex-direction: column;
+      background: url(../img/sample1.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        opacity: .8;
     }
+
 
     main {
       flex: 1 0 auto;
+    }
+
+    h2 {
+        font-family: 'Special Elite', cursive;
+    }
+
+    h3 {
+        /* font-family: 'Roboto', sans-serif; */
+        font-family: 'Special Elite', cursive;
+        font-size: 1.92rem;
     }
